# tcia-api-requester

./: .gitignore  README.md  pyproject.toml
TAr/: api_request_controller.py  no_dicom.out
TAr/config/: arg_parser.py  config.py  logger.py
TAr/data/raw/raw-rider-breast-mri-dicom/patient-rider1627409910/study-6837353292/series-9637135262/sedesc-adc-=-short-int-value-x-0.2e06-(units:-10e03-mm^2/s)/: LICENSE
TAr/src/: helpers.py  tcia_api.py
